some CSS changes

--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,16 @@ button:focus-visible {
   margin: 10px;
 
 }
+
+.box {
+  width: 1200px;
+  height: 900px;
+  background-color: rgba(105, 90, 205, 0.315);
+  display: grid;
+  place-items: center;
+}
+
+.modal {
+  display: grid;
+  place-items: center;
+}
